// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityTable DOM should render correctly - compact 1`] = `
<table
  aria-label="Host inventory"
  class="ins-c-entity-table pf-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-22"
  data-ouia-component-type="PF4/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class=""
  >
    <tr
      class=""
      data-ouia-component-id="OUIA-Generated-TableRow-35"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-c-table__check"
        data-key="0"
        data-label=""
      >
        <input
          aria-label="Select all rows"
          name="check-all"
          type="checkbox"
        />
      </td>
      <th
        aria-sort="none"
        class="pf-c-table__sort"
        data-key="1"
        data-label="One"
        scope="col"
      >
        <button
          class="pf-c-table__button"
          type="button"
        >
          <div
            class="pf-c-table__button-content"
          >
            <span
              class="pf-c-table__text"
            >
              One
            </span>
            <span
              class="pf-c-table__sort-indicator"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                />
              </svg>
            </span>
          </div>
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
    role="rowgroup"
  >
    <tr
      class=""
      data-ouia-component-id="OUIA-Generated-TableRow-36"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-c-table__check"
        data-key="0"
      >
        <input
          aria-label="Select row 0"
          name="checkrow0"
          type="checkbox"
        />
      </td>
      <td
        class=""
        data-key="1"
        data-label="One"
      >
        <div
          class="ins-composed-col"
        >
          <div />
          <div
            class=""
          >
            <a
              href="/testing-id"
              widget="col"
            >
              data
            </a>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`EntityTable DOM should render correctly - grid breakpoints 1`] = `
<Table
  aria-label="Host inventory"
  borders={true}
  canSelectAll={true}
  canSortFavorites={true}
  cells={
    Array [
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
    ]
  }
  className="ins-c-entity-table"
  contentId="expanded-content"
  dropdownDirection="down"
  dropdownPosition="right"
  expandId="expandable-toggle"
  gridBreakPoint="grid-lg"
  isStickyHeader={false}
  isTreeTable={false}
  onSelect={[Function]}
  onSort={[Function]}
  ouiaSafe={true}
  role="grid"
  rowLabeledBy="simple-node"
  rows={
    Array [
      Object {
        "actionProps": Object {
          "data-ouia-component-id": "testing-id-actions-kebab",
        },
        "cells": Array [
          "data",
          "data",
          "data",
          "data",
          "data",
          "data",
        ],
        "id": "testing-id",
        "one": "data",
        "system_profile": Object {},
      },
    ]
  }
  selectVariant="checkbox"
  sortBy={
    Object {
      "direction": undefined,
      "index": 0,
    }
  }
  variant={null}
/>
`;

exports[`EntityTable DOM should render correctly - is expandable 1`] = `
<Table
  aria-label="Host inventory"
  borders={true}
  canSelectAll={true}
  canSortFavorites={true}
  cells={
    Array [
      Object {
        "cellFormatters": Array [
          [Function],
        ],
        "key": "one",
        "renderFunc": [Function],
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
    ]
  }
  className="ins-c-entity-table"
  contentId="expanded-content"
  dropdownDirection="down"
  dropdownPosition="right"
  expandId="expandable-toggle"
  gridBreakPoint="grid-md"
  isStickyHeader={false}
  isTreeTable={false}
  onCollapse={[Function]}
  onSelect={[Function]}
  onSort={[Function]}
  ouiaSafe={true}
  role="grid"
  rowLabeledBy="simple-node"
  rows={
    Array [
      Object {
        "actionProps": Object {
          "data-ouia-component-id": "testing-id-actions-kebab",
        },
        "cells": Array [
          <React.Fragment>
            <div
              className="ins-composed-col"
            >
              <div />
              <div
                className=""
              >
                <a
                  href="/testing-id"
                  onClick={[Function]}
                  widget="col"
                >
                  data
                </a>
              </div>
            </div>
          </React.Fragment>,
        ],
        "id": "testing-id",
        "one": "data",
        "system_profile": Object {},
      },
    ]
  }
  selectVariant="checkbox"
  sortBy={
    Object {
      "direction": undefined,
      "index": 1,
    }
  }
  variant={null}
/>
`;

exports[`EntityTable DOM should render correctly - no data 1`] = `
<EntityTable
  disableDefaultColumns={true}
  expandable={false}
  hasCheckbox={true}
  loaded={false}
  onExpandClick={[Function]}
  rows={Array []}
  showActions={false}
  showHealth={false}
  tableProps={Object {}}
/>
`;

exports[`EntityTable DOM should render correctly - no rows 1`] = `
<table
  aria-label="Host inventory"
  class="ins-c-entity-table pf-c-table pf-m-grid-md"
  data-ouia-component-id="OUIA-Generated-Table-4"
  data-ouia-component-type="PF4/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class=""
  >
    <tr
      class=""
      data-ouia-component-id="OUIA-Generated-TableRow-17"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <th
        class=""
        data-key="0"
        data-label="One"
        scope="col"
      >
        One
      </th>
    </tr>
  </thead>
  <tbody
    class=""
    role="rowgroup"
  >
    <tr
      class=""
      data-ouia-component-id="OUIA-Generated-TableRow-18"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class=""
        colspan="1"
        data-key="0"
        data-label="One"
      >
        <div
          class="ins-c-table__empty"
        >
           
          <div
            class="pf-l-bullseye"
          >
            <div
              class="pf-c-empty-state"
            >
              <div
                class="pf-c-empty-state__content"
              >
                <h5
                  class="pf-c-title pf-m-lg"
                >
                  No matching systems found
                </h5>
                <div
                  class="pf-c-empty-state__body"
                >
                  This filter criteria matches no systems. 
                  <br />
                   Try changing your filter settings.
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`EntityTable DOM should render correctly - with actions 1`] = `
<Table
  actions={Array []}
  aria-label="Host inventory"
  borders={true}
  canSelectAll={true}
  canSortFavorites={true}
  cells={
    Array [
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "renderFunc": [Function],
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
    ]
  }
  className="ins-c-entity-table"
  contentId="expanded-content"
  dropdownDirection="down"
  dropdownPosition="right"
  expandId="expandable-toggle"
  gridBreakPoint="grid-md"
  isStickyHeader={false}
  isTreeTable={false}
  onSelect={[Function]}
  onSort={[Function]}
  ouiaSafe={true}
  role="grid"
  rowLabeledBy="simple-node"
  rows={
    Array [
      Object {
        "actionProps": Object {
          "data-ouia-component-id": "testing-id-actions-kebab",
        },
        "cells": Array [
          <React.Fragment>
            <div
              className="ins-composed-col"
            >
              <div />
              <div
                className=""
              >
                <a
                  href="/testing-id"
                  onClick={[Function]}
                  widget="col"
                >
                  data
                </a>
              </div>
            </div>
          </React.Fragment>,
        ],
        "id": "testing-id",
        "one": "data",
        "system_profile": Object {},
      },
    ]
  }
  selectVariant="checkbox"
  sortBy={
    Object {
      "direction": undefined,
      "index": 0,
    }
  }
  variant={null}
/>
`;

exports[`EntityTable DOM should render correctly - with customNoSystemsTable 1`] = `
<table
  aria-label="Host inventory"
  class="ins-c-entity-table pf-c-table pf-m-grid-md"
  data-ouia-component-id="OUIA-Generated-Table-6"
  data-ouia-component-type="PF4/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class=""
  >
    <tr
      class=""
      data-ouia-component-id="OUIA-Generated-TableRow-19"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <th
        class=""
        data-key="0"
        data-label="One"
        scope="col"
      >
        One
      </th>
    </tr>
  </thead>
  <tbody
    class=""
    role="rowgroup"
  >
    <tr
      class=""
      data-ouia-component-id="OUIA-Generated-TableRow-20"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class=""
        colspan="1"
        data-key="0"
        data-label="One"
      >
        <div>
          NO SYSTEMS
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`EntityTable DOM should render correctly - without checkbox 1`] = `
<Table
  aria-label="Host inventory"
  borders={true}
  canSelectAll={true}
  canSortFavorites={true}
  cells={
    Array [
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "renderFunc": [Function],
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
    ]
  }
  className="ins-c-entity-table"
  contentId="expanded-content"
  dropdownDirection="down"
  dropdownPosition="right"
  expandId="expandable-toggle"
  gridBreakPoint="grid-md"
  isStickyHeader={false}
  isTreeTable={false}
  onSort={[Function]}
  ouiaSafe={true}
  role="grid"
  rowLabeledBy="simple-node"
  rows={
    Array [
      Object {
        "actionProps": Object {
          "data-ouia-component-id": "testing-id-actions-kebab",
        },
        "cells": Array [
          <React.Fragment>
            <div
              className="ins-composed-col"
            >
              <div />
              <div
                className=""
              >
                <a
                  href="/testing-id"
                  onClick={[Function]}
                  widget="col"
                >
                  data
                </a>
              </div>
            </div>
          </React.Fragment>,
        ],
        "id": "testing-id",
        "one": "data",
        "system_profile": Object {},
      },
    ]
  }
  selectVariant="checkbox"
  sortBy={
    Object {
      "direction": undefined,
      "index": -1,
    }
  }
  variant={null}
/>
`;

exports[`EntityTable DOM should render correctly 1`] = `
<table
  aria-label="Host inventory"
  class="ins-c-entity-table pf-c-table pf-m-grid-md"
  data-ouia-component-id="OUIA-Generated-Table-26"
  data-ouia-component-type="PF4/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class=""
  >
    <tr
      class=""
      data-ouia-component-id="OUIA-Generated-TableRow-39"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-c-table__check"
        data-key="0"
        data-label=""
      >
        <input
          aria-label="Select all rows"
          name="check-all"
          type="checkbox"
        />
      </td>
      <th
        aria-sort="none"
        class="pf-c-table__sort"
        data-key="1"
        data-label="One"
        scope="col"
      >
        <button
          class="pf-c-table__button"
          type="button"
        >
          <div
            class="pf-c-table__button-content"
          >
            <span
              class="pf-c-table__text"
            >
              One
            </span>
            <span
              class="pf-c-table__sort-indicator"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                />
              </svg>
            </span>
          </div>
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
    role="rowgroup"
  >
    <tr
      class=""
      data-ouia-component-id="OUIA-Generated-TableRow-40"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-c-table__check"
        data-key="0"
      >
        <input
          aria-label="Select row 0"
          name="checkrow0"
          type="checkbox"
        />
      </td>
      <td
        class=""
        data-key="1"
        data-label="One"
      >
        <div
          class="ins-composed-col"
        >
          <div />
          <div
            class=""
          >
            <a
              href="/testing-id"
              widget="col"
            >
              data
            </a>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`EntityTable DOM should render correctly with has items 1`] = `null`;

exports[`EntityTable DOM sort by should render correctly - is expandable 1`] = `
<Table
  aria-label="Host inventory"
  borders={true}
  canSelectAll={true}
  canSortFavorites={true}
  cells={
    Array [
      Object {
        "cellFormatters": Array [
          [Function],
        ],
        "key": "one",
        "renderFunc": [Function],
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
    ]
  }
  className="ins-c-entity-table"
  contentId="expanded-content"
  dropdownDirection="down"
  dropdownPosition="right"
  expandId="expandable-toggle"
  gridBreakPoint="grid-md"
  isStickyHeader={false}
  isTreeTable={false}
  onCollapse={[Function]}
  onSelect={[Function]}
  onSort={[Function]}
  ouiaSafe={true}
  role="grid"
  rowLabeledBy="simple-node"
  rows={
    Array [
      Object {
        "actionProps": Object {
          "data-ouia-component-id": "testing-id-actions-kebab",
        },
        "cells": Array [
          <React.Fragment>
            <div
              className="ins-composed-col"
            >
              <div />
              <div
                className=""
              >
                <a
                  href="/testing-id"
                  onClick={[Function]}
                  widget="col"
                >
                  data
                </a>
              </div>
            </div>
          </React.Fragment>,
        ],
        "id": "testing-id",
        "one": "data",
        "system_profile": Object {},
      },
    ]
  }
  selectVariant="checkbox"
  sortBy={
    Object {
      "direction": undefined,
      "index": 2,
    }
  }
  variant={null}
/>
`;

exports[`EntityTable DOM sort by should render correctly - without checkbox 1`] = `
<Table
  aria-label="Host inventory"
  borders={true}
  canSelectAll={true}
  canSortFavorites={true}
  cells={
    Array [
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "renderFunc": [Function],
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
    ]
  }
  className="ins-c-entity-table"
  contentId="expanded-content"
  dropdownDirection="down"
  dropdownPosition="right"
  expandId="expandable-toggle"
  gridBreakPoint="grid-md"
  isStickyHeader={false}
  isTreeTable={false}
  onSort={[Function]}
  ouiaSafe={true}
  role="grid"
  rowLabeledBy="simple-node"
  rows={
    Array [
      Object {
        "actionProps": Object {
          "data-ouia-component-id": "testing-id-actions-kebab",
        },
        "cells": Array [
          <React.Fragment>
            <div
              className="ins-composed-col"
            >
              <div />
              <div
                className=""
              >
                <a
                  href="/testing-id"
                  onClick={[Function]}
                  widget="col"
                >
                  data
                </a>
              </div>
            </div>
          </React.Fragment>,
        ],
        "id": "testing-id",
        "one": "data",
        "system_profile": Object {},
      },
    ]
  }
  selectVariant="checkbox"
  sortBy={
    Object {
      "direction": undefined,
      "index": 0,
    }
  }
  variant={null}
/>
`;

exports[`EntityTable DOM sort by should render correctly 1`] = `
<Table
  aria-label="Host inventory"
  borders={true}
  canSelectAll={true}
  canSortFavorites={true}
  cells={
    Array [
      Object {
        "cellFormatters": Array [],
        "key": "one",
        "renderFunc": [Function],
        "title": "One",
        "transforms": Array [
          [Function],
        ],
      },
    ]
  }
  className="ins-c-entity-table"
  contentId="expanded-content"
  dropdownDirection="down"
  dropdownPosition="right"
  expandId="expandable-toggle"
  gridBreakPoint="grid-md"
  isStickyHeader={false}
  isTreeTable={false}
  onSelect={[Function]}
  onSort={[Function]}
  ouiaSafe={true}
  role="grid"
  rowLabeledBy="simple-node"
  rows={
    Array [
      Object {
        "actionProps": Object {
          "data-ouia-component-id": "testing-id-actions-kebab",
        },
        "cells": Array [
          <React.Fragment>
            <div
              className="ins-composed-col"
            >
              <div />
              <div
                className=""
              >
                <a
                  href="/testing-id"
                  onClick={[Function]}
                  widget="col"
                >
                  data
                </a>
              </div>
            </div>
          </React.Fragment>,
        ],
        "id": "testing-id",
        "one": "data",
        "system_profile": Object {},
      },
    ]
  }
  selectVariant="checkbox"
  sortBy={
    Object {
      "direction": undefined,
      "index": 1,
    }
  }
  variant={null}
/>
`;
